# cbpickaxe

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASE.md  cb_data_mining.yml  monster_spawn_rates.py  pyproject.toml  sellable_stickers.py  setup.cfg
.github/workflows/: python-library.yml
cbpickaxe/: __init__.py  animation.py  elemental_type.py  hoylake.py  item.py  misc_types.py  monster_form.py  move.py  resource.py  translation_table.py
cbpickaxe_scripts/: __init__.py  extract_translation.py  generate_docs.py  generate_monster_animations.py  get_move_users.py  recover_animation_json.py
cbpickaxe_scripts/templates/: base.html  index.html  item.html  monster_form.html  move.html
docs/: index.html  requirements.txt
docs/monsters/: Traffikrabdos.html
docs/moves/: [SIF] Chilling Gust.html  [SIF] Controlled Burn.html  [SIF] Crop Raze.html  [SIF] Crop Rotation.html  [SIF] Dandelion Puff.html  [SIF] Fertile Soil.html  [SIF] Graze.html  [SIF] Greenhouse.html  [SIF] Growth Chemicals.html  [SIF] Harvest Season.html  [SIF] Miracle Seed.html  [SIF] Overgrowth.html  [SIF] Pecked Clean.html  [SIF] Rumination.html  [SIF] Shear Force.html  [SIF] Vine Whip.html  [SIF] Weedkiller.html  [SIF] What We Reap.html  [SIF] What We Sow.html  [SIF] Wild Growth.html
docs/source/: conf.py  index.rst
docs/source/css/: tablefix.css
docs/source/generate_docs/: config_file.rst  intro.rst  tutorial.rst
docs/source/other_scripts/: extract_translation_strings.rst  generate_monster_animations.rst  get_move_users.rst  intro.rst
docs/source/python_api/: classes_and_methods.rst  example_scripts.rst  intro.rst  roots.rst  tutorial.rst
misc_scripts/: create_name_languages_table.py  get_monster_names.py  mine_monster_forms.py  monster_max_move_slots.py  monster_spawn_rates.py  recover_animation_json.py  try_hoylake.py
old_scripts/: bad_joke.py  bootleg_screenshotting.py  get_move_users.py  try_hoylake.py
regression_tests/: test_regression_extract_translation.py  test_regression_generate_docs_build.py  test_regression_generate_docs_new.py  util.py
regression_tests/baselines/generate_docs_build_empty_mod/docs/: index.html
regression_tests/baselines/generate_docs_build_mod_with_moves/docs/: index.html
regression_tests/baselines/generate_docs_build_mod_with_moves/docs/moves/: Fire Spit.html
regression_tests/baselines/generate_docs_new_basic/: docs.toml
regression_tests/baselines/generate_docs_new_no_to_everything/: docs.toml
regression_tests/baselines/generate_docs_new_spaces_in_name/: docs.toml
regression_tests/baselines/generate_docs_new_yes_to_everything/: docs.toml
regression_tests/data/: docs_empty.toml  docs_moves.toml  test.pr.translation  test_strings.txt
regression_tests/data/mod_with_monster_and_move/mods/mod_with_monster_and_move/battle_moves/: fire_spit.tres
regression_tests/data/mod_with_monster_and_move/mods/mod_with_monster_and_move/translations/: mod_keys.csv  mod_keys.csv.import  mod_keys.en.translation
regression_tests/work_dirs/extract_translation_basic/: translated_strings.csv
scripts/: extract_translation.py  mine_monster_forms.py  monster_max_move_slots.py
