[metadata]
name = cbpickaxe
version = 0.0.1

[options]
packages = find:
install_requires =
    godot_parser
    smaz-py3
    Jinja2
    Pillow

[options.package_data]
cbpickaxe =
    *.md
    py.typed

[options.entry_points]
console_scripts =
    cbpickaxe_extract_translation = cbpickaxe_scripts:extract_translation_main
    cbpickaxe_get_move_users = cbpickaxe_scripts:get_move_users_main
    cbpickaxe_generate_docs = cbpickaxe_scripts:generate_docs_main
    cbpickaxe_recover_animation_json = cbpickaxe_scripts:recover_animation_json_main